style.css
:root {
  --clr-pri: #ffffff;
  --clr-sec: #f8f8f8;
  --clr-thr: #ebebeb;
  --clr-nav-a: #707070;
  --clr-title: #143774;
  --clr-subtitle: #1792d2;

  --ff-lora: "Lora", serif;
  --ff-ubu: "Ubuntu", sans-serif;
}

body {
  background-color: var(--clr-pri);
  margin: 0;

  font-family: var(--ff-ubu);
}

/* ==============
  Typography
============== */

h1 {
  font-family: var(--ff-lora);
  color: var(--clr-title);
  font-weight: 400;
  margin: 0;
}

.subtitle {
  color: var(--clr-subtitle);
  text-transform: uppercase;
  font-weight: 700;
  font-size: 0.75rem;
  margin: 0;

  letter-spacing: 0.12rem;
}

/* ==============
  Layout
============== */

.container {
  width: 90%;
  max-width: 900px;
  margin: 0 auto;
}

.container-nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
  /* flex-wrap: wrap; */
}

header {
  text-align: center;
  background-color: var(--clr-sec);
  padding: 2em 0;
}

@media (max-width: 775px) {
  .container-nav {
    flex-direction: column;
    justify-content: center;
  }
}

main {
  padding: 4em 0;
}

/* navigation */

nav ul {
  list-style: none;
  padding: 0;
  display: flex;
  justify-content: center;
}

nav li {
  margin-left: 2em;
}

nav a {
  text-decoration: none;
  color: var(--clr-nav-a);
  font-weight: 700;
  text-transform: uppercase;
  padding: 0.25rem 0;
  letter-spacing: 0.15em;
}

nav a:hover,
nav a:focus {
  color: var(--clr-subtitle);
}

.current-page {
  border-bottom: 3px solid var(--clr-nav-a);
}

.current-page:hover {
  color: var(--clr-nav-a);
}

@media (max-width: 775px) {
  nav ul {
    flex-direction: column;
  }

  nav li {
    margin: 1em;
  }
}

/* ==============
  Main
============== */

img {
  max-width: 100%;
}

.home-content-bottom-item {
  margin: 3em 0;
}

.continue-anchor {
  font-family: var(--ff-ubu);
  text-decoration: none;
  color: #1792d2;
  text-transform: uppercase;
  letter-spacing: 0.175rem;
  font-size: 0.875rem;
}

.img-description {
  text-align: left;
  color: var(--clr-nav-a);
  font-weight: 700;
}

.post-data {
  color: #707070;
  margin: 1em 0;
  font-size: 0.8rem;
}

.post-title {
  font-size: 1.5rem;
}

hr {
  margin: 2em 0;
}

.side-title {
  text-transform: uppercase;
  font-size: 1.125rem;
  letter-spacing: 3.6px;
  font: normal normal bold 18px/28px Ubuntu;
  color: var(--clr-title);
  margin: 1em 0;
}

.side-subtitle {
  font-size: 1.125rem;
  padding: 0.3em 0;
}

.side-p {
  color: var(--clr-title);
}

.home-side-top-item {
  padding: 1em;
  border: 1rem solid #ebebeb;
}

.home-side-bottom-container {
  padding: 1em;
  border: 1rem solid #ebebeb;
}

.home-side-bottom-container hr {
  margin: 1em 0;
}

.home-side {
  display: flex;
  flex-direction: column;
  gap: 2em;
}

.home-side-bottom-item img {
  height: 100px;
  /* max-width: 300px; */
  width: 100%;
  object-fit: cover;
}

/* ==============
  Footer
============== */

footer {
  background-color: #143774;
  padding: 3em;
  margin: 0 auto;
  text-align: center;
  color: #ffffff;
}

footer h1 {
  color: #ffffff;
  font: normal normal bold 18px/28px Ubuntu;
  opacity: 0.5;
  font-weight: 100;
}

footer p {
  text-align: center;
  opacity: 0.5;
  font-weight: 100;
}

/* Media Query */

@media (min-width: 800px) {
  main {
    display: flex;
    gap: 2em;
  }

  .home-content-bottom-item {
    display: flex;
    gap: 2em;
  }

  .home-content-bottom-item-pic img {
    height: 200px;
    max-width: 200px;
    object-fit: cover;
  }
}

